--- a/conf/app.conf
+++ b/conf/app.conf
@@ -24,3 +24,8 @@ ossaccessKeyId = "LTAIr9CFSL4I44et"
 ossaccessKeySecret = "mFZ38Xzz3hqjQ2upcVNabFsBcZPZ97"
 osshost = "http://19apps.oss-cn-shanghai.aliyuncs.com"
 ossupload_dir = "/"
+
+wxAppID = "wx5b2239600927ab3c"
+wxAppSecret = "b886d3314807967ba390aeecde3ff495"
+
+Website="彭山4050"
