--- a/conf/app.conf
+++ b/conf/app.conf
@@ -18,7 +18,7 @@ AdminAddr = "localhost"
 AdminPort = 8088
 
 maxmemory = 1<<22
-UploadPath = "/uploads/"
+UploadPath = "uploads/"
 
 ossaccessKeyId = "LTAIr9CFSL4I44et"
 ossaccessKeySecret = "mFZ38Xzz3hqjQ2upcVNabFsBcZPZ97"
