--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,9 +7,9 @@ xsrfexpire = 3600
 
 jwtkey = yeshulin@chinamcloud.com
 
-mysqluser = "sobey"
-mysqlpass = "sobey123"
-mysqlurls = "172.29.4.87"
+mysqluser = "4050"
+mysqlpass = "4050!@#123"
+mysqlurls = "139.196.98.195"
 mysqldb = "4050"
 mysqlport = "3306"
 
